--- a/style.css
+++ b/style.css
@@ -42,26 +42,27 @@ body::before {
 
 }
 
-header {
+header{
+  width: 90%;
+  height: 64px;
+  display: flex;
+  align-items: center;
+  margin: 45px auto 0;
+}
+header img{
+  max-width:75px;
+  max-height:150px;
   width: auto;
-  margin-top: 275px;
-  text-align: center;
+  height: auto;
+  opacity: 0.5;
 }
-
-header h1 {
-  text-transform: uppercase;
-  font-family: 'Montserrat';
-  font-weight: bold;
-  font-size: 16px;
-  line-height: 26px;
-  color: var(--white);
-  margin-bottom: 24px;
+header a:hover img{
+  opacity: 1;
 }
-
 form {
   background: #FAFAFC;
   min-height: 300px;
-  margin-top: 10px;
+  margin-top: 220px;
   padding: 64px;
   border-radius: 8px 8px 0 0;
 
@@ -121,7 +122,7 @@ fieldset legend {
   background: #FAFAFC;
   border: 1px solid #E6E6F0;
   border-radius: 8px;
-  height: 56px;
+  height: 36px;
   padding: 0 24px;
   font-size: 16px;
   line-height: 26px;
